# MCP-Postman-API

./: .env.example  .gitignore  README.md  mcp.json  pyproject.toml  server.py  server_old.py
src/: __init__.py  base_generator.py  factory.py  framework_detector.py  types.py
src/generators/: __init__.py  django_generator.py  express_generator.py  fastapi_generator.py  flask_generator.py  laravel_generator.py  spring_boot_generator.py
