[project]
name = "django-api-postman-mcp"
version = "0.1.0"
description = "MCP server that scaffolds Django APIs and updates Postman collections"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.27.0"
]

[project.scripts]
django-api-postman-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "server.py"]
